some minor fixes

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -30,10 +30,11 @@ and why data analysis projects can benefit from it
 - Create a remote version control repository on GitHub
 - use Jupyter's Git version control tools for project versioning and 
 collaboration, specifically to:
-
+  
+  - clone a remote version control repository to your local computer
   - commit changes to a local version control repository
-  - push changes to a remote version control repository
-  - pull changes from a remote version control repository
+  - push local changes to a remote version control repository
+  - pull changes from a remote version control repository to your local version control repository
   - resolve merge conflicts
 
 - Give collaborators access to a remote GitHub repository
@@ -63,8 +64,19 @@ mind-boggling filenames that make it unclear
 which is the current working version of the file 
 (e.g., `document_final_draft_final.txt`, `golden_master_final.txt`, 
 `to_hand_in_final.txt`, etc), and more. 
+
 Additionally, the iterative nature of data analysis projects 
-makes it important to be able to examine earlier versions of code and writing. 
+means that most of the time, the final version of the analysis that is
+shared with the audience is only a fraction of what was explored during 
+the development of that analysis. 
+Changes in data visualizations and modelling approaches, 
+as well as some negative results are often not observable from 
+reviewing only the final, polished analysis.
+The lack of observability of these parts of the analysis development
+can lead to others repeating things that did not work well, 
+instead of seeing what did not work well, 
+and using that as a springboard to new, more fruitful approaches.
+
 Finally, data analyses are typically completed by a team of people 
 rather than a single person. 
 This means that files need to be shared across multiple computers, 
@@ -75,8 +87,12 @@ and how to resolve conflicting edits---can be a real challenge.
 Version control helps solve these challenges by tracking changes to the files 
 in the analysis (code, writing, data, etc) over the lifespan of the project, 
 including when the changes were made and who made them. 
-This provides the means both to view earlier versions of the project 
-and to revert changes. Version control also facilitates collaboration 
+It also provides the means both to view earlier versions of the project 
+and to revert changes. 
+Being able to record and view the history of a data analysis project
+is important for understanding how and why decisions to use one method 
+or another were made, among other things.
+Version control also facilitates collaboration 
 via tools to share edits with others and resolve conflicting edits. 
 But even if you're working on a project alone, 
 you should still use version control. 
@@ -102,7 +118,7 @@ In this textbook we'll use Git for version control,
 and GitHub for repository hosting, 
 because both are currently the most widely-used platforms.
 In the 
-[additional resources section at the end of the chapter](\@ref(vc-add-res)) 
+[additional resources section at the end of the chapter](vc-add-res)
 we list many of the common version control systems 
 and repository hosting services in use today.
 
@@ -136,7 +152,7 @@ This copy is commonly referred to as our **remote** repository
 > as well as a laptop or desktop computer to be the local computer.
 
 ```{r vc1-no-changes, fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2}
-image_read("img/vc2-changes.png") %>%
+image_read("img/vc1-no-changes.png") %>%
   image_crop("3632x2000")
 ```
 
@@ -147,11 +163,11 @@ This history is a record of all versions of the project files
 that have been recorded. 
 The repository history is not automatically generated, 
 and requires human intervention to tell the version control software 
-(*e.g.,* Git) that we would like to record a version of the project. 
+(*e.g.,* Git) when we would like to record a version of the project. 
 These records are called *commits* and they are a snapshot of the files when 
 Git was told to record a version of the project, as well metadata about the 
 repository at that time the record was created 
-(who made the changes, when they were made, *etc.*). 
+(who made the snapshot, when it was made, *etc.*). 
 
 > **Note:** During the process that creates commits, 
 > a human needs to tell Git which files should be tracked 
@@ -191,7 +207,7 @@ of the current version of your work, you need to *commit*
 files should be included in that snapshot. We call this step **adding** the 
 files to the staging area. 
 Note that the staging area is **not** a real physical location on your computer, 
-it is instead a conceptual placeholder for these files until they are commit.
+it is instead a conceptual placeholder for these files until they are committed.
 The benefit of the Git version control system using a staging area is that you 
 can choose to commit changes from only certain files. For example, 
 in Figure \@ref(fig:vc-ba2-add) we only add the two files 
@@ -199,7 +215,7 @@ that are quite relevant to the analysis project
 (`analysis.ipynb` and `README.md`) and not our personal scratch notes for the 
 project (`notes.txt`).
 
-```{r vc-ba2-add, fig.cap = 'The modified files for which you want a snapshot need to be **added** to the staging area.', fig.retina = 2}
+```{r vc-ba2-add, fig.cap = 'The modified files for which you want a snapshot need to be **added** to the staging area on your local computer.', fig.retina = 2}
 image_read("img/vc-ba2-add.png") %>%
   image_crop("3632x1200")
 ```
@@ -207,7 +223,7 @@ image_read("img/vc-ba2-add.png") %>%
 Once the files we wish to commit to the repository history have been added 
 to the staging area, we can then commit those flagged files to the repository.
 When we do this, we are required to include a helpful *commit message* to tell 
-collaborators (which included future you) about the changes that were made 
+collaborators (which often includes future you) about the changes that were made 
 (Figure \@ref(fig:vc-ba3-commit)). 
 It is important to note here that these changes are only being committed to the 
 repository history on you local computer. 
