done draft of version control chapter - added one more image and some small fixes in this last edit

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -246,6 +246,19 @@ visit the repository on GitHub (the remote repository working directory)
 
 ```{r vc5-push, fig.cap = 'The commit needs to be **pushed** to send the changes to the remote repository on GitHub.', fig.retina = 2}
 image_read("img/vc5-push.png") %>%
+  image_crop("3632x3000")
+```
+
+In (Figure \@ref(fig:vc5-5-nachos-to-cheesecake)) we summarize all the steps needed to 
+version control the changes you make on your local computer so that they exist 
+both locally and remotely. In sum, they are:
+
+1. **Add** changes to the local staging area
+2. **Commit** changes to the local version control history
+3. **Push** the local changes too the remote version control repository
+
+```{r vc5-5-nachos-to-cheesecake, fig.cap = 'To version changes both locally and remotely, they must be added, committed and pushed.', fig.retina = 2}
+image_read("img/vc5-5-nachos-to-cheesecake.png") %>%
   image_crop("3632x2000")
 ```
 
@@ -253,8 +266,8 @@ image_read("img/vc5-push.png") %>%
 
 If you are working on a project with collaborators, and they make some changes
 (e.g., to the analysis code in a Jupyter notebook and the project's README file) 
-and want to share them with you using version control. 
-They will go through the process we just
+and want to share them with you using version control, 
+they will go through the process we just
 described above and push their changes to the GitHub repository. 
 When they do this, the changes will only initially exist there on the remote
 GitHub repository,
@@ -270,7 +283,7 @@ you will need to *pull* those changes to your own local computer
 (*i.e.*, JupyterHub server workspace or laptop) so that you can have a copy of 
 them locally. Additionally, until you do this you will not be able to push
 any more changes yourself. By pulling their changes, 
-you sync your local repository to what is present on GitHub.  
+you synchronize your local repository to what is present on GitHub.  
 
 > **Note:** you can still work on your own cloned repository and commit changes even if collaborators
 have pushed changes to the GitHub repository. It is only when you try to *push* your changes back to GitHub
@@ -323,10 +336,10 @@ following (also shown in Figure \@ref(fig:new-repository-02)):
 3. Select "Add a README file." This creates a template `README.md` file in your repository's root folder.
 4. When you are happy with your repository name and configuration, click on the green "Create Repository" button.
 
-```{r new-repository-02, fig.cap = 'Respository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2}
+```{r new-repository-02, fig.cap = 'Repository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2}
 image_read("img/version_control/new_repository_02.png") %>%
   image_flop() %>%
-  image_crop("1700x2240+1000-150") %>%
+  image_crop("1700x2240+1000-100") %>%
   image_flop()
 ```
 
@@ -843,13 +856,21 @@ image_read("img/version_control/issue_06.png") %>%
 
 ## Additional resources {#vc-add-res}
 
-Now that you've picked up the basics of version control with Git and GitHub, you can expand your knowledge using 
-one of the many tutorials available online:
+Now that you've picked up the basics of version control with Git and GitHub, 
+you can expand your knowledge through the resources listed below:
 
-### Best practices and workflows
+### Best practices and workflows {-}
 - [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best]  by Greg Wilson, Jennifer Bryan, Karen Cranston, Justin Kitzes, Lex Nederbragt & Tracy K. Teal advises and elaborates further on useful workflows and good enough practices to version control data analysis projects.
+    
+### Technical references {-}
+Below we link to additional tutorials 
+and guides for three common repository hosting services:
 
-### List of common version control systems and repository hosting services
+- GitHub's [guides website](https://guides.github.com/)
+- GitHub's [YouTube channel](https://www.youtube.com/githubguides)
+- BitBucket's [tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
+
+### List of common version control systems and repository hosting services {-}
 Below we list and link out to the most commonly used version control systems 
 and repository hosting services:
 
@@ -861,11 +882,3 @@ and repository hosting services:
     - [GitHub](https://github.com)
     - [GitLab](https://gitlab.com)
     - [BitBucket](https://bitbucket.org)
-    
-### Technical references
-Below we link to additional tutorials 
-and guides for three common repository hosting services:
-
-- GitHub's [guides website](https://guides.github.com/)
-- GitHub's [YouTube channel](https://www.youtube.com/githubguides)
-- BitBucket's [tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
