refactoring filenames, added chapter list to new _bookdown.yml, changed some chapter names

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -1,4 +1,4 @@
-# Getting started with version control {#Getting-started-with-version-control}
+# Collaboration with version control {#Getting-started-with-version-control}
 
 ```{r 12-getting-started-with-version-control, echo = FALSE, message = FALSE, warning = FALSE}
 library(magick)
