--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -1,4 +1,4 @@
-# Getting started with Jupyter {#getting-started-with-jupyter}
+# Combining code and text with Jupyter {#getting-started-with-jupyter}
 
 ```{r 11-how-to-get-started-using-r, echo = FALSE, message = FALSE, warning = FALSE}
 library(magick)
