--- a/inference.Rmd
+++ b/inference.Rmd
@@ -1,4 +1,4 @@
-# Introduction to Statistical Inference {#inference}
+# Introduction to statistical inference {#inference}
 
 ```{r 11-setup, include= F}
 knitr::opts_chunk$set(warning = FALSE)
