--- a/intro.Rmd
+++ b/intro.Rmd
@@ -1,12 +1,11 @@
 # R and the tidyverse {#intro}
 ## Overview
 
-This chapter provides an introduction to the R programming language. We will
-learn about some fundamental R topics and then go through an entire data
-analysis task! We will see how to load, clean, wrangle, and visualize some data
-to answer a specific question at a high level. Later in the book, we will learn
-each of these steps in more detail, but let's jump in now to see how much we
-can do with data science!
+This chapter provides an introduction to data science and the R programming language.
+The goal here is to get your hands dirty right from the start: we will walk through an entire data analysis,
+and along the way introduce different types of data analysis questions, some fundamental programming 
+concepts in R, and the basics of loading, cleaning, and visualizing data. In the following chapters, we will
+dig into each of these steps in much more detail; but for now, let's jump in the deep end!
 
 ## Chapter Learning Objectives
 
