updated learning goals to reflect chapter content

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -5,23 +5,20 @@ This chapter provides an introduction to data science and the R programming lang
 The goal here is to get your hands dirty right from the start: we will walk through an entire data analysis,
 and along the way introduce different types of data analysis questions, some fundamental programming 
 concepts in R, and the basics of loading, cleaning, and visualizing data. In the following chapters, we will
-dig into each of these steps in much more detail; but for now, let's jump in the deep end!
+dig into each of these steps in much more detail; but for now, let's jump in to see how much we can do 
+with data science!
 
 ## Chapter Learning Objectives
 
 By the end of the chapter, readers will be able to:
 
+- identify the different types of data analysis question and categorize a question into the correct type
 - load the `tidyverse` package into R
+- read tabular data with `read_csv`
+- use `?` to access help and documentation tools in R
 - create new variables and objects in R using the assignment symbol
-- use the help and documentation tools in R
-- match the names of the following functions from the `tidyverse` package to their documentation descriptions: 
-    - `read_csv` 
-    - `select`
-    - `filter`
-    - `arrange`
-    - `slice`
-    - `ggplot`
-    - `aes`
+- create and organize subsets of tabular data using `filter`, `select`, `arrange`, and `slice`
+- visualize data with a `ggplot` bar plot
 
 ## Ask a question 
 
