added subsection for accessing help documentation

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -585,3 +585,31 @@ visualization! We asked a question, loaded the data into R, wrangled the data
 help answer our question.  In this chapter, you got a quick taste of the data
 science workflow, but we will learn each of these steps in more detail in the
 coming chapters! 
+
+## Accessing documentation
+
+There are many R functions in the `tidyverse` package (and beyond!), and 
+nobody can be expected to remember what every one of them does
+nor all of the arguments we have to give them. Fortunately R provides 
+the `?` symbol, which provides an easy way to pull up the documentation for 
+most functions quickly. To use the `?` symbol to access documentation, you 
+just put the name of the function you are curious about after the `?` symbol.
+For example, if you had forgotten what the `filter` function
+did or exactly what arguments to pass in, you could run the following
+code: 
+```{r 01-get-help, warning = FALSE, message = FALSE}
+?filter
+```
+Figure \@ref(fig:01-help) shows the documentation that will pop up,
+including a high-level description of the function, its arguments, 
+a description of each, and more. Note that you may find some of the
+text in the documentation a bit too technical right now 
+(for example, what is `dbplyr`, and what is grouped data?).
+Fear not: as you work through this book, many of these terms will be introduced
+to you, and slowly but surely you will become more adept at understanding and navigating 
+documentation like that in Figure \@ref(fig:01-help). But do keep in mind that the documentation
+is not meant to *teach* you about a function. It is just there as a reference to *remind*
+you about the different arguments and usage of functions that you have already learned about elsewhere.
+```{r 01-help, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The documentation for the `filter` function, including a high-level description, a list of arguments and their meanings, and more.", fig.retina = 2}
+knitr::include_graphics("img/help-filter.png")
+```
