rudimentary references cleanup (still needs a lot of work...)

--- a/references.bib
+++ b/references.bib
@@ -9,20 +9,20 @@
 }
 
 @misc{cancensus2016,
-  author = {Statistics Canada},
-  title = {Census of Population. Reproduced and distributed on an "as is" basis with the permission of Statistics Canada},
-  year = {2016},
+  author = {{Statistics Canada}},
+  title = {Population Census},
+  year = {2016}
 }
 
 @misc{language2018,
-  author = {Statistics Canada},
+  author = {{Statistics Canada}},
   title = {Aboriginal languages in Canada},
   year = {2018},
 }
 
 @article{leek2015question,
   title={What is the question?},
-  author={Leek, Jeffery T and Peng, Roger D},
+  author={Jeffrey Leek and Roger Peng},
   journal={Science},
   volume={347},
   number={6228},
@@ -80,22 +80,21 @@
 
 
 @Manual{timbers2020canlang,
-  title = {canlang: Canadian Census language data},
+  title = {{canlang}: Canadian Census language data},
   author = {Tiffany Timbers},
   year = {2020},
   note = {R package version 0.0.9},
   url = {https://ttimbers.github.io/canlang/},
 }
 
- @Article{wickham2019tidverse,
+@article{wickham2019tidverse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
     journal = {Journal of Open Source Software},
     volume = {4},
     number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
+    pages = {1686}
   }
 
 @Manual{Rlanguage,
@@ -114,9 +113,9 @@
   url = {https://style.tidyverse.org/}
 }
 
-@misc{statcan2018mothertongue,
-  author = {Statistics Canada},
-  title = {The evolution of language populations in Canada, by mother tongue, from 1901 to 2016},
+@online{statcan2018mothertongue,
+  author = {{Statistics Canada}},
+  title = {The evolution of language populations in {C}anada, by mother tongue, from 1901 to 2016},
   year = 2018,
   url = {https://www150.statcan.gc.ca/n1/pub/11-630-x/11-630-x2018001-eng.htm},
   urldate = {2021-05-27}
@@ -139,31 +138,27 @@
 }
 
 @Manual{palmerpenguins,    
-    title = {{palmerpenguins}: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},    
-    year = {2020},    
+    title = {{palmerpenguins}: Palmer Archipelago penguin data},
+    author = {Allison Horst and Alison Hill and Kristen Gorman},    
     note = {R package version 0.1.0},    
-    doi = {10.5281/zenodo.3960218},    
     url = {https://allisonhorst.github.io/palmerpenguins/}}
 
-@MISC{penguinsimage,
+@online{penguinsimage,
     author = {{Andrew Shiva}},
-    title = {Brown Bluff-2016-Tabarin Peninsula–Gentoo penguin (Pygoscelis papua)},
+    title = {Gentoo penguin, {B}rown {B}luff, {T}abarin peninsula},
     year = {2016},
-    note = {[Online; accessed May 11, 2021]},
-    url = {https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg}
-}
+    urldate = {2021-05-11},
+    url = {https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg}}
 
 @book{children2012,
-  title={They came for the children : Canada, aboriginal peoples, and the residential schools},
-  author={Canada. Truth and Reconciliation Commission of Canada},
-  year={2012},
-  publisher={Ottawa - Ontario : Truth and Reconciliation Commission of Canada}
+  title={They came for the children: Canada, aboriginal peoples, and the residential schools},
+  author={{Truth and Reconciliation Commission of Canada}},
+  year={2012}
 }
 
 @misc{calls2015,
   title={Calls to Action},
-  author={Canada. Truth and Reconciliation Commission of Canada},
+  author={{Truth and Reconciliation Commission of Canada}},
   year={2015},
   url={http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf}
 }
@@ -191,7 +186,7 @@
   year={1977}}
 
 @misc{lightdata,
-  author = {Albert A. Michelson},
+  author = {Albert Michelson},
   title = {Experimental determination of the velocity of light made at the United States Naval Academy, Annapolis},
   journal={Astronomic Papers},
   address = {U.S. Nautical Almanac Office},
@@ -201,7 +196,7 @@
   note = {(see Table 24)}}
 
 @Manual{RColorBrewer,
-    title = {RColorBrewer: ColorBrewer Palettes},
+    title = {{RColorBrewer}: ColorBrewer Palettes},
     author = {Erich Neuwirth},
     year = {2014},
     note = {R package version 1.1-2},
@@ -211,5 +206,5 @@
     author = {Murray Cox},
     title = {Inside Airbnb},
     url = {http://insideairbnb.com/},
-  urldate = {2020-09-01}
+    urldate = {2020-09-01}
 }
