--- a/intro.Rmd
+++ b/intro.Rmd
@@ -597,7 +597,7 @@ just put the name of the function you are curious about after the `?` symbol.
 For example, if you had forgotten what the `filter` function
 did or exactly what arguments to pass in, you could run the following
 code: 
-```{r 01-get-help, warning = FALSE, message = FALSE}
+```
 ?filter
 ```
 Figure \@ref(fig:01-help) shows the documentation that will pop up,
@@ -607,8 +607,8 @@ text in the documentation a bit too technical right now
 (for example, what is `dbplyr`, and what is grouped data?).
 Fear not: as you work through this book, many of these terms will be introduced
 to you, and slowly but surely you will become more adept at understanding and navigating 
-documentation like that in Figure \@ref(fig:01-help). But do keep in mind that the documentation
-is not meant to *teach* you about a function. It is just there as a reference to *remind*
+documentation like that shown in Figure \@ref(fig:01-help). But do keep in mind that the documentation
+is not written to *teach* you about a function; it is just there as a reference to *remind*
 you about the different arguments and usage of functions that you have already learned about elsewhere.
 ```{r 01-help, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The documentation for the `filter` function, including a high-level description, a list of arguments and their meanings, and more.", fig.retina = 2}
 knitr::include_graphics("img/help-filter.png")
