chapter learning objectives style consistency in subseection title

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -8,7 +8,7 @@ concepts in R, and the basics of loading, cleaning, and visualizing data. In the
 dig into each of these steps in much more detail; but for now, let's jump in to see how much we can do 
 with data science!
 
-## Chapter Learning Objectives
+## Chapter learning objectives
 
 By the end of the chapter, readers will be able to:
 
