fixed incorrect chapter references and hardlinks

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -437,7 +437,7 @@ The data are, therefore, in what we call a *tidy data* format. Tidy data is a
 fundamental concept and will be a significant focus in the remainder of this
 book: many of the functions from `tidyverse` require tidy data, including the
 `ggplot` function that we will use shortly for our visualization. We will
-formally introduce this concept in chapter 3.
+formally introduce this concept in Chapter \@ref(wrangling).
 
 
 We will make a bar plot to visualize our data. A bar plot is a chart where the
@@ -488,7 +488,7 @@ use the `xlab` and `ylab` functions to add layers where we specify meaningful
 and informative labels for the x and y axes. Again, since we are specifying
 words (e.g. `"Mother tongue (Number of Canadians residents)"`) as arguments to
 `xlab` and `ylab`, we surround them with double-quotes. We can add many more
-layers to format the plot further, and we will explore these in chapter
+layers to format the plot further, and we will explore these in Chapter
 \@ref(viz).
 
 ```{r barplot-mother-tongue-labs, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with x and y labels"}
@@ -540,7 +540,7 @@ n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 
 Learning how to describe data visualizations is a very useful skill. We will
 provide descriptions for you in this book (as we did above) until we get to
-chapter 4, which focuses on data visualization. Then, we will explicitly teach
+Chapter \@ref(viz), which focuses on data visualization. Then, we will explicitly teach
 you how to do this yourself and not over-state or over-interpret the results
 from a visualization.
 
